--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -59,6 +59,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^5.0.2",
     "puppeteer-core": "^23.0.0",
+    "sharp": "^0.34.4",
     "typescript": "~5.8.3",
     "uuid": "^13.0.0"
   }
