PDF service adjustments

--- a/study-planner/helios-ts/tsconfig.json
+++ b/study-planner/helios-ts/tsconfig.json
@@ -19,6 +19,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
 
     /* Library specific */
     "declaration": true,
