--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
+    "build": "npm run type-check && vite build",
     "dev": "vite",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
