BUild errors, PDF generation via HTML

--- a/study-planner/Dockerfile
+++ b/study-planner/Dockerfile
@@ -16,8 +16,37 @@ RUN pnpm --filter helios-server build
 # This stage creates the runtime image
 FROM node:22-alpine AS runtime
 
-# Install curl for health checks
-RUN apk add --no-cache curl
+# Install curl for health checks and Chrome dependencies for Puppeteer
+RUN apk add --no-cache \
+    curl \
+    chromium \
+    nss \
+    freetype \
+    freetype-dev \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont \
+    at-spi2-atk \
+    atk \
+    cups-libs \
+    dbus-glib \
+    gtk+3.0 \
+    libX11 \
+    libXcomposite \
+    libXcursor \
+    libXdamage \
+    libXext \
+    libXfixes \
+    libXi \
+    libXrandr \
+    libXScrnSaver \
+    libXtst \
+    pango \
+    alsa-lib
+
+# Set Puppeteer to use installed Chromium
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 # Create a non-root user for security
 RUN addgroup -g 1001 -S helios && \
