--- a/study-planner/helios-server/package.json
+++ b/study-planner/helios-server/package.json
@@ -24,7 +24,8 @@
     "helios-ts": "workspace:*",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "docx": "^9.5.1"
+    "docx": "^9.5.1",
+    "puppeteer": "^24.24.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
