--- a/study-planner/helios-ts/Dockerfile
+++ b/study-planner/helios-ts/Dockerfile
@@ -3,6 +3,37 @@ FROM node:22-alpine AS builder
 
 WORKDIR /app
 
+# Install Chrome dependencies for Puppeteer
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    freetype-dev \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont \
+    at-spi2-atk \
+    atk \
+    cups-libs \
+    dbus-glib \
+    gtk+3.0 \
+    libX11 \
+    libXcomposite \
+    libXcursor \
+    libXdamage \
+    libXext \
+    libXfixes \
+    libXi \
+    libXrandr \
+    libXScrnSaver \
+    libXtst \
+    pango \
+    alsa-lib
+
+# Set Puppeteer to use installed Chromium
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+
 # Copy package files
 COPY helios-ts/package*.json ./
 
@@ -18,6 +49,37 @@ RUN npm run build
 # --- Final Stage ---
 # This stage creates the library distribution image
 FROM node:22-alpine AS runtime
+
+# Install Chrome dependencies for Puppeteer
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    freetype-dev \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont \
+    at-spi2-atk \
+    atk \
+    cups-libs \
+    dbus-glib \
+    gtk+3.0 \
+    libX11 \
+    libXcomposite \
+    libXcursor \
+    libXdamage \
+    libXext \
+    libXfixes \
+    libXi \
+    libXrandr \
+    libXScrnSaver \
+    libXtst \
+    pango \
+    alsa-lib
+
+# Set Puppeteer to use installed Chromium
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 # Create a non-root user for security
 RUN addgroup -g 1001 -S helios && \
