--- a/study-planner/shared-ui-library/package.json
+++ b/study-planner/shared-ui-library/package.json
@@ -9,11 +9,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
+    "build": "pnpm type-check && vite build",
     "dev": "vite",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "keywords": [
     "react",
@@ -41,7 +43,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "~5.8.3",
     "vite": "^4.4.0",
-    "vite-plugin-dts": "^3.0.0"
+    "vite-plugin-dts": "^3.0.0",
+    "vitest": "^1.0.0",
+    "@vitest/ui": "^1.0.0",
+    "jsdom": "^23.0.0"
   },
   "dependencies": {
     "firebase": "^12.3.0",
