--- a/study-planner/shared-ui-library/tsconfig.json
+++ b/study-planner/shared-ui-library/tsconfig.json
@@ -25,6 +25,6 @@
     "declarationMap": true,
     "outDir": "dist"
   },
-  "include": ["src", "src/vite-env.d.ts"],
+  "include": ["src", "src/vite-env.d.ts", "src/test-setup.ts", "src/__tests__/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
