--- a/study-planner/plan-editor-library/package.json
+++ b/study-planner/plan-editor-library/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
+    "build": "pnpm type-check && vite build",
     "dev": "vite",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
