--- a/study-planner/plan-editor-library/tsconfig.json
+++ b/study-planner/plan-editor-library/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/__tests__/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
