--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,59 +1,43 @@
-# Copy this file to terraform.tfvars and update the values
+# Example Terraform variables file
+# Copy this to terraform.tfvars and customize for your environment
 
-# Basic Configuration
-aws_region   = "us-west-2"
+# Project Configuration
+project_name = "study-planner"
 environment  = "production"
-project_name = "upscpro"
+aws_region   = "ap-south-1"
 
-# Database Configuration (REQUIRED)
-rds_password = "your-secure-database-password-here"
+# Domain Configuration (for SSL certificate)
+domain_name     = "your-domain.com"  # Replace with your actual domain
+route53_zone_id = "Z1234567890ABC"   # Replace with your Route53 hosted zone ID
 
-# Redis Configuration (REQUIRED if using Redis)
-redis_password = "your-secure-redis-password-here"
+# SSL Certificate Configuration
+enable_https = true
+# certificate_arn = ""  # Leave empty if using domain_name (ACM will create certificate)
 
-# Flower Configuration (REQUIRED for Celery monitoring)
-flower_user     = "admin"
-flower_password = "your-secure-flower-password-here"
+# RDS Configuration
+enable_rds = true
+rds_allocated_storage = 20
+rds_instance_class = "db.t3.micro"
+rds_database_name = "app"
+rds_username = "app"
+rds_password = "your-secure-password"  # Use a secure password
 
-# Optional: Custom VPC CIDR (default: 10.0.0.0/16)
-# vpc_cidr = "10.0.0.0/16"
+# EC2 Configuration
+enable_ec2_instances = true
+docker_instance_type = "t3.medium"
+strapi_instance_type = "t3.small"
 
-# Optional: Enable/Disable Services
-# enable_rds   = true
-# enable_redis = true
+# GitHub Integration (optional)
+github_repository_url = "https://github.com/your-username/your-repo"
+github_branch = "main"
+github_token = "your-github-token"  # For private repos
+enable_auto_deploy = false
+webhook_secret = "your-webhook-secret"
 
-# Optional: RDS Configuration
-# rds_instance_class = "db.t3.micro"
-# rds_allocated_storage = 20
+# ALB Configuration
+alb_deletion_protection = false
 
-# Optional: ECS Resource Configuration
-# ecs_app_cpu     = 512
-# ecs_app_memory  = 1024
-# ecs_app_count   = 1
-
-# Optional: Application Environment Variables
-# app_environment_variables = {
-#   ENVIRONMENT = "production"
-#   CORS_ORIGINS = "[\"https://your-domain.com\"]"
-# }
-
-# Optional: SSL Configuration (uncomment and configure for HTTPS)
-# enable_https    = true
-# certificate_arn = "arn:aws:acm:us-west-2:123456789012:certificate/12345678-1234-1234-1234-123456789012"
-
-# Optional: Domain Configuration (for Route53)
-# route53_zone_id = "Z1D633PJN98FT9"
-# domain_name     = "your-domain.com"
-
-# GitHub Integration (REQUIRED for automatic deployments)
-github_token          = "your-github-personal-access-token-here"
-github_repository_url = "https://github.com/your-username/your-repository.git"
-github_branch         = "main"
-
-# Optional: Automatic Deployment Configuration
-# enable_auto_deploy = true
-# webhook_secret     = "your-webhook-secret-here"
-
-# Optional: RDS Deployment Method
-# deploy_rds_separately = true  # Set to true to deploy RDS independently
-# rds_module_vpc_cidr   = "10.1.0.0/16"  # CIDR for RDS VPC if deploying separately
+# Docker Configuration
+app_image_tag = "latest"
+frontend_image_tag = "latest"
+helios_image_tag = "latest"
