--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -28,7 +28,9 @@
     "lint": "eslint src --ext .ts,.tsx",
     "test": "vitest",
     "generate-docs": "node --max-old-space-size=8192 --import tsx scripts/generate-test-documents2.ts",
-    "generate-docs-dry": "node --max-old-space-size=8192 --import tsx scripts/generate-test-documents2.ts --dry-run"
+    "generate-docs-dry": "node --max-old-space-size=8192 --import tsx scripts/generate-test-documents2.ts --dry-run",
+    "compare-cycles": "node --max-old-space-size=8192 --import tsx scripts/compare-cycle-dates.ts",
+    "compare-docs": "node --max-old-space-size=8192 --import tsx scripts/compare-existing-docs.ts"
   },
   "keywords": [
     "typescript",
