Calendar view changes

--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -62,9 +62,11 @@
     "dayjs": "^1.11.18",
     "docx": "^9.5.1",
     "firebase": "^12.3.0",
+    "html-to-pdfmake": "^2.5.31",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^5.0.2",
+    "pdfmake": "^0.2.20",
     "puppeteer": "^24.24.0",
     "puppeteer-core": "^23.0.0",
     "sharp": "^0.34.4",
