--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -55,6 +55,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "scheduler": "workspace:*",
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
