--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -29,6 +29,7 @@
     "test": "vitest",
     "generate-docs": "node --max-old-space-size=8192 --import tsx scripts/generate-test-documents.ts",
     "generate-swathi": "node --max-old-space-size=8192 --import tsx scripts/generate-swathi.ts",
+    "generate-template": "node --max-old-space-size=8192 --import tsx scripts/generate-table-styles-template.ts",
     "generate-docs-dry": "node --max-old-space-size=8192 --import tsx scripts/generate-test-documents.ts --dry-run",
     "compare-cycles": "node --max-old-space-size=8192 --import tsx scripts/compare-cycle-dates.ts",
     "compare-docs": "node --max-old-space-size=8192 --import tsx scripts/compare-existing-docs.ts"
