--- a/study-planner/scheduler2/package.json
+++ b/study-planner/scheduler2/package.json
@@ -2,18 +2,18 @@
   "name": "scheduler2",
   "version": "1.0.0",
   "description": "scheduler for UPSC and competitive exams",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
+  "types": "src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js"
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
   },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "build": "npm run type-check && vite build",
