--- a/study-planner/helios-ts/package.json
+++ b/study-planner/helios-ts/package.json
@@ -7,14 +7,14 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs.js"
     },
     "./server": {
+      "types": "./dist/server.d.ts",
       "import": "./dist/server.esm.js",
-      "require": "./dist/server.cjs.js",
-      "types": "./dist/server.d.ts"
+      "require": "./dist/server.cjs.js"
     }
   },
   "files": [
