--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,149 +1,127 @@
+version: '3.8'
 
 services:
-  # Python FastAPI Application
   app:
-    container_name: upscapp-backend
-    env_file:
-      - .env
     build:
       context: .
-      dockerfile: Dockerfile.prod
-    restart: always
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    networks:
-      - upscpro-be
-    depends_on:
-      - app_redis
-      - helios-engine
     environment:
-      - HELIOS_INTEGRATION_MODE=http
-      - HELIOS_SERVER_URL=http://helios-engine:8080
-      - HELIOS_SERVER_TIMEOUT=30
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/healthcheck"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - STRAPI_URL=${STRAPI_URL}
+      - HELIOS_SERVER_URL=${HELIOS_SERVER_URL}
+      - ENVIRONMENT=${ENVIRONMENT}
+    depends_on:
+      - helios
+    restart: unless-stopped
+    command: ["python", "src/main.py"]
+    volumes:
+      - ./logs:/app/logs
 
-  # Haskell Helios Engine
-  helios-engine:
-    container_name: helios-engine
+  helios:
     build:
-      context: .
-      dockerfile: Dockerfile.helios
-    restart: always
+      context: ./helios
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    networks:
-      - upscpro-be
     environment:
       - PORT=8080
-      - ENVIRONMENT=production
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
-
-  # Redis for caching and task queue
-  app_redis:
-    container_name: app_redis
-    image: redis:7-alpine
-    hostname: redis
-    command:
-      - 'redis-server'
-      - '--requirepass ${REDIS_PASSWORD}'
-    restart: always
-    ports:
-      - "6379:6379"
-    networks:
-      - upscpro-be
+      - ENVIRONMENT=${ENVIRONMENT}
+    restart: unless-stopped
+    command: ["python", "main.py"]
     volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - ./helios/logs:/app/logs
 
-  # Celery Worker for background tasks
-  celery_worker:
-    container_name: celery_worker
-    env_file:
-      - .env
+  frontend:
     build:
-      context: .
-      dockerfile: Dockerfile.prod
-    restart: always
-    command: celery -A src.tasks.celery_tasks worker -l INFO -E --concurrency=2
-    networks:
-      - upscpro-be
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    environment:
+      - REACT_APP_API_URL=${REACT_APP_API_URL}
+      - REACT_APP_HELIOS_URL=${REACT_APP_HELIOS_URL}
+    restart: unless-stopped
     depends_on:
       - app
-      - app_redis
-      - helios-engine
-    environment:
-      - HELIOS_INTEGRATION_MODE=http
-      - HELIOS_SERVER_URL=http://helios-engine:8080
-    healthcheck:
-      test: ["CMD", "celery", "-A", "src.tasks.celery_tasks", "inspect", "ping"]
-      interval: 60s
-      timeout: 10s
-      retries: 3
 
-  # Celery Flower for monitoring
-  celery_flower:
-    container_name: celery_flower
-    env_file:
-      - .env
+  onboarding-ui:
+    build:
+      context: ./onboarding-ui
+      dockerfile: Dockerfile
+    ports:
+      - "3001:80"
+    environment:
+      - REACT_APP_API_URL=${REACT_APP_API_URL}
+      - REACT_APP_HELIOS_URL=${REACT_APP_HELIOS_URL}
+    restart: unless-stopped
+    depends_on:
+      - app
+
+  faculty-ui:
+    build:
+      context: ./faculty-ui
+      dockerfile: Dockerfile
+    ports:
+      - "3002:80"
+    environment:
+      - REACT_APP_API_URL=${REACT_APP_API_URL}
+      - REACT_APP_HELIOS_URL=${REACT_APP_HELIOS_URL}
+    restart: unless-stopped
+    depends_on:
+      - app
+
+  celery:
     build:
       context: .
-      dockerfile: Dockerfile.prod
-    command: celery -A src.tasks.celery_tasks flower --url-prefix=flower --basic-auth=${FLOWER_USER}:${FLOWER_PASSWORD}
+      dockerfile: Dockerfile
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - ENVIRONMENT=${ENVIRONMENT}
+    restart: unless-stopped
+    command: ["celery", "-A", "src.tasks.celery_tasks", "worker", "-l", "INFO", "-E", "--concurrency=2"]
+    depends_on:
+      - app
+    volumes:
+      - ./logs:/app/logs
+
+  flower:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "5555:5555"
-    networks:
-      - upscpro-be
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - ENVIRONMENT=${ENVIRONMENT}
+    restart: unless-stopped
+    command: ["celery", "-A", "src.tasks.celery_tasks", "flower", "--port=5555"]
     depends_on:
-      - app
-      - app_redis
-      - celery_worker
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5555/flower/"]
-      interval: 60s
-      timeout: 10s
-      retries: 3
+      - celery
 
-  # Nginx reverse proxy (optional)
-  nginx:
-    container_name: nginx-proxy
-    image: nginx:alpine
-    restart: always
+  webhook:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    networks:
-      - upscpro-be
+      - "9000:9000"
+    environment:
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - GITHUB_REPOSITORY_URL=${GITHUB_REPOSITORY_URL}
+      - GITHUB_BRANCH=${GITHUB_BRANCH}
+      - WEBHOOK_SECRET=${WEBHOOK_SECRET}
+      - ENABLE_AUTO_DEPLOY=${ENABLE_AUTO_DEPLOY}
+    restart: unless-stopped
+    command: ["python", "scripts/webhook_server.py"]
     depends_on:
       - app
-      - helios-engine
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-volumes:
-  redis_data:
-    driver: local
+    volumes:
+      - ./logs:/app/logs
 
 networks:
-  upscpro-be:
-    external: false
-    name: upscpro-be
+  default:
+    driver: bridge
