--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -45,12 +45,18 @@ COPY study-planner/package.json study-planner/pnpm-workspace.yaml study-planner/
 
 # Copy all package.json files for dependency resolution
 COPY study-planner/helios-ts/package.json ./helios-ts/
+
+#RUN (cd study-planner && find . -name package.json | tar czf - -T - |tar tzf -)
+
 COPY study-planner/servers/helios-server/package.json ./servers/helios-server/
-COPY study-planner/onboarding-ui/package.json ./onboarding-ui/
+COPY study-planner/libs/scheduler/package.json ./libs/scheduler/
+COPY study-planner/libs/scheduler2/package.json ./libs/scheduler2/
 COPY study-planner/shared-ui-library/package.json ./shared-ui-library/
-COPY study-planner/faculty-ui/package.json ./faculty-ui/
 COPY study-planner/plan-editor-library/package.json ./plan-editor-library/
+COPY study-planner/onboarding-ui/package.json ./onboarding-ui/
+COPY study-planner/faculty-ui/package.json ./faculty-ui/
 
 # Install all dependencies
 RUN pnpm install --frozen-lockfile
 
+COPY study-planner/ ./
