--- a/study-planner/apps/onboarding2/package.json
+++ b/study-planner/apps/onboarding2/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "helios-ts": "file:../study-planner/libs/helios-ts"
+    "helios-ts": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
