--- a/study-planner/apps/onboarding2/package.json
+++ b/study-planner/apps/onboarding2/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "helios-ts": "workspace:*",
+    "dayjs": "^1.11.18",
     "helios-scheduler": "workspace:*",
-    "dayjs": "^1.11.13"
+    "helios-ts": "workspace:*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
