--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,6 @@
 # Use the base image with pnpm setup
 FROM study-planner:base AS workspace-builder
-
+WORKDIR /app/study-planner
 RUN rm -rf servers
 RUN pnpm --filter ./apps/\* build
 
@@ -9,7 +9,7 @@ FROM nginx:alpine
 
 # Copy built files from workspace builder
 # COPY --from=workspace-builder /app/faculty-ui/dist/ /usr/share/nginx/html/faculty/
-COPY --from=workspace-builder /app/apps/onboarding2/dist/ /usr/share/nginx/html/onboarding/
+COPY --from=workspace-builder /app/study-planner/apps/onboarding2/dist/ /usr/share/nginx/html/onboarding/
 # Copy unified nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
