removed fs and path dependency on scheduler code (from debug code) and minor mods to Dockerfiles

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,7 +2,8 @@
 FROM study-planner:base AS workspace-builder
 WORKDIR /app/study-planner
 RUN rm -rf servers
-RUN pnpm --filter ./apps/\* build
+RUN pnpm install --frozen-lockfile
+RUN pnpm  --filter ./apps/\* build
 
 # Production stage with nginx
 FROM nginx:alpine
