--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,42 +1,5 @@
 # Base image with pnpm and common setup
-FROM node:22-alpine AS base
-
-# Install pnpm globally
-RUN npm install -g pnpm
-
-# Install Chrome dependencies for Puppeteer
-# Enable community repository for additional packages
-RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/main" > /etc/apk/repositories && \
-    echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
-    apk update
-
-RUN apk add --no-cache \
-    chromium \
-    nss \
-    freetype \
-    freetype-dev \
-    harfbuzz \
-    ca-certificates \
-    ttf-freefont \
-    cups-libs \
-    dbus-glib \
-    gtk+3.0 \
-    libx11 \
-    libxcomposite \
-    libxcursor \
-    libxdamage \
-    libxext \
-    libxfixes \
-    libxi \
-    libxrandr \
-    libxtst \
-    pango \
-    alsa-lib
-
-# Set Puppeteer to use installed Chromium
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
-
+FROM node:alpine-pnpm AS base
 # Set working directory
 WORKDIR /app
 
@@ -44,12 +7,12 @@ WORKDIR /app
 
 # Copy all package.json files for dependency resolution
 
-COPY study-planner/pnpm-workspace.yaml study-planner/pnpm-lock.yaml /app/study-planner/
-# docker-package-jsons is created by docker-build.sh
 COPY docker-package-jsons/ /app/study-planner/
+COPY study-planner/pnpm-workspace.yaml /app/study-planner/
+COPY study-planner/pnpm-lock.yaml /app/study-planner/
+# docker-package-jsons is created by docker-build.sh
 # RUN (cd study-planner && find . -name package.json | tar czf - -T - |tar tzf -)
 
-# COPY study-planner/package.json study-planner/pnpm-workspace.yaml study-planner/pnpm-lock.yaml ./
 # COPY study-planner/servers/helios-server/package.json ./servers/helios-server/
 # COPY study-planner/libs/*/package.json ./libs/helios-scheduler/
 # COPY study-planner/apps/*/package.json ./libs/helios-scheduler/
@@ -63,9 +26,8 @@ COPY docker-package-jsons/ /app/study-planner/
 
 
 # Install all dependencies
-RUN (cd study-planner && pnpm install --frozen-lockfile)
+RUN pnpm -C study-planner install --frozen-lockfile
 
 COPY study-planner/ ./study-planner/
-RUN (cd study-planner && pnpm install)
-RUN (cd study-planner &&  pnpm --filter ./libs/\*  build)
+RUN pnpm -C study-planner --filter ./libs/\*  build
 
