Updating to dockerfiles from bitbucket repo version 1.2.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     env_file:
       - docker.env
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: py-backend
+      dockerfile: Dockerfile.prod
     restart: always
     volumes:
       - ./:/code
